src/main/kotlin/com/navid/test/creditcard/config/error/exception/InvalidDeserializationException.kt
package com.navid.test.creditcard.config.error.exception

/**
 * @author Navid Ghahremani (ghahramani.navid@gmail.com)
 */
class InvalidDeserializationException(message: String?) : Exception(message)
